PSP/borradores/ae/jwt/TVREST-AdrianSaavedra/src/main/java/org/example/tvrestadriansaavedra/common/errors/UnauthorizedOperationException.java
package org.example.tvrestadriansaavedra.common.errors;

public class UnauthorizedOperationException extends RuntimeException {
    public UnauthorizedOperationException(String message) {
        super(message);
    }
}

